Improved hover state of search results, added search field cancel button back in and it is no longer cut off by padding, made everything a bit more flexible

--- a/app/assets/stylesheets/active_admin/_base.css.scss
+++ b/app/assets/stylesheets/active_admin/_base.css.scss
@@ -3,8 +3,6 @@
 
 // Reset Away!
 @include global-reset;
-@include reset-search-fields;    
-
 
 // Partials
 @import "active_admin/typography";
