--- a/app/assets/stylesheets/active_admin/_header.css.scss
+++ b/app/assets/stylesheets/active_admin/_header.css.scss
@@ -101,7 +101,7 @@
   #utility_nav { 
     color: #aaa;
     position: absolute;
-    right: 200px;
+    right: 210px;
     top: 10px; 
     
     span, a { margin-left: 10px; }
