--- a/app/assets/stylesheets/active_admin/mixins/_reset.css.scss
+++ b/app/assets/stylesheets/active_admin/mixins/_reset.css.scss
@@ -163,13 +163,3 @@
       display: block !important; }
     @else {
       display: block; } } }
-      
-      
-@mixin reset-search-fields {
-  input[type=search]::-webkit-search-decoration,
-  input[type=search]::-webkit-search-cancel-button,
-  input[type=search]::-webkit-search-results-button,
-  input[type=search]::-webkit-search-results-decoration {
-    display: none;
-  }
-}
