--- a/app/assets/stylesheets/active_admin/mixins/_variables.css.scss
+++ b/app/assets/stylesheets/active_admin/mixins/_variables.css.scss
@@ -4,7 +4,7 @@
 $primary-color: #5E6469;
 $secondary-color: #f0f0f0;
 $text-color: #323537;
-$link-color: #38678b;
+$link-color: #3f749d;
 $section-header-text-color: $primary-color;
 $current-menu-item-background: lighten($primary-color, 12%);
 $hover-menu-item-background: lighten($primary-color, 12%);
